{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "814bef20-0b17-4d3e-a495-9c8558837692",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9b083878-058a-4af3-8d40-3c7145a84111",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "startReferenceCaptureAction",
                    "type": "Button",
                    "id": "a0c905bc-dd53-47b2-9b5d-09be11587dd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartUserRecording",
                    "type": "Button",
                    "id": "660c6ded-a399-4da6-94c5-3069431a3b4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StopUserRecording",
                    "type": "Button",
                    "id": "20530c69-cbf7-4ec5-9599-0e618c9b4016",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4bc91edc-912d-4c8c-acf1-9a98e5c93577",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "424760d8-ec73-4702-8b41-6b1852bf20c7",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "startReferenceCaptureAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b93136df-c1eb-40a0-8555-1a2fc6c61667",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartUserRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "029ed4b3-daf7-40a7-9101-3427288282e7",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopUserRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}